[gd_scene load_steps=12 format=3 uid="uid://dgjhpr7cft5vo"]

[ext_resource type="PackedScene" uid="uid://obhs6tqkno1" path="res://characters/enemies/enemy_template.tscn" id="1_flhto"]
[ext_resource type="Script" path="res://characters/enemies/bull.gd" id="2_8s7dp"]
[ext_resource type="Texture2D" uid="uid://cuilto7u8xk2a" path="res://textures/basic_shapes/square.png" id="2_kn26r"]
[ext_resource type="Texture2D" uid="uid://c5dtlpgvynwrs" path="res://textures/basic_shapes/circle.png" id="3_5arlq"]
[ext_resource type="AudioStream" uid="uid://b8qviy7bfhtrq" path="res://audio/hit.mp3" id="3_fqtec"]
[ext_resource type="Texture2D" uid="uid://cseajnytuwplf" path="res://textures/basic_shapes/cross.png" id="4_ya6xj"]
[ext_resource type="Texture2D" uid="uid://4gevuclkdy3q" path="res://textures/basic_shapes/half_circle.png" id="6_a45wi"]
[ext_resource type="Texture2D" uid="uid://crmxumhhhm3vx" path="res://textures/shapes/sword.svg" id="7_vwcov"]
[ext_resource type="AudioStream" uid="uid://col71nfejpg3b" path="res://audio/attack_bull.mp3" id="8_gojc1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6l357"]
radius = 37.4833

[sub_resource type="Curve" id="Curve_yxkl8"]
_data = [Vector2(0.011976, 0.989011), 0.0, 0.0, 0, 0, Vector2(0.982036, 0.010989), -2.93626, 0.0, 0, 0]
point_count = 2

[node name="bull" groups=["enemy"] instance=ExtResource("1_flhto")]
script = ExtResource("2_8s7dp")

[node name="hp_manager" parent="." index="2" node_paths=PackedStringArray("hp_bar")]
hp_bar = NodePath("../Progress_bar")
hp_max = 200.0

[node name="hitsound" type="AudioStreamPlayer2D" parent="hp_manager" index="0"]
stream = ExtResource("3_fqtec")
bus = &"SFX"

[node name="Progress_bar" parent="." index="3"]
z_index = 5
position = Vector2(-26, 2.03288e-20)
rotation = 1.5708
scale = Vector2(0.4, 0.8)

[node name="visuals" type="Node2D" parent="." index="4"]
rotation = 1.5708
scale = Vector2(1.3, 1.3)

[node name="Sprite2D" type="Sprite2D" parent="visuals" index="0"]
modulate = Color(0.396524, 0.69987, 0.456939, 1)
z_index = -1
position = Vector2(0, 10)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_kn26r")

[node name="Sprite2D2" type="Sprite2D" parent="visuals" index="1"]
modulate = Color(0.424041, 0.264873, 0.212404, 1)
position = Vector2(0, -10)
scale = Vector2(0.075, 0.075)
texture = ExtResource("3_5arlq")

[node name="Sprite2D3" type="Sprite2D" parent="visuals" index="2"]
modulate = Color(0.718106, 0.172701, 0.204984, 1)
z_index = -2
position = Vector2(0, -18)
scale = Vector2(0.095, 0.095)
texture = ExtResource("4_ya6xj")

[node name="dash_duration" type="Timer" parent="." index="5"]
wait_time = 6.0
one_shot = true

[node name="walk_duration" type="Timer" parent="." index="6"]
one_shot = true
autostart = true

[node name="attack" type="Node2D" parent="." index="7"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="attack" index="0"]
modulate = Color(0.88, 0.176, 0.187733, 0.333333)
position = Vector2(-9, -8.17124e-14)
rotation = 1.5708
scale = Vector2(0.2, 0.3)
texture = ExtResource("6_a45wi")

[node name="Area2D" type="Area2D" parent="attack" index="1"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack/Area2D" index="0"]
visible = false
position = Vector2(26, 1)
shape = SubResource("CircleShape2D_6l357")

[node name="CPUParticles2D" type="CPUParticles2D" parent="attack" index="2"]
z_index = 1
lifetime = 0.4
local_coords = true
texture = ExtResource("7_vwcov")
emission_shape = 1
emission_sphere_radius = 39.54
gravity = Vector2(-1500, 0)
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_yxkl8")
color = Color(1, 0, 0.14902, 0.392157)

[node name="attack_sound" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource("8_gojc1")
pitch_scale = 0.72
bus = &"SFX"

[connection signal="timeout" from="dash_duration" to="." method="stop_dash"]
[connection signal="area_entered" from="attack/Area2D" to="." method="area_entered"]
